MutualGateways/gateway2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ing
spec:
  hosts:
  - "http.helloworld.com"
  gateways:
  - ing-gateway
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: ing
